@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.lastship" version="3.0.4" name="Lastship" provider-name="Lastship">
+<addon id="plugin.video.lastship" version="3.0.5~nightly1" name="Lastship" provider-name="Lastship">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="repository.lastship" version="1.0.2" />
@@ -27,9 +27,7 @@
     			<screenshot>resources/screenshots/screenshot-03.jpg</screenshot>
 		</assets>
 		<news>
-- Add beliebige IMDB Listen
-- Fix Trailer abspiel Probleme
-- Hompagelink aktualisiert
+- Fix Amazon (deutsche Tonspur)
 		</news>
 	</extension>
 </addon>
